--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>Toda vez que eu penso em você meu coração acelera e eu fico sem jeito, tipo um gatinho recebendo carinho pela primeira vez</header>
     <div>
-        <a href="http://127.0.0.1:5500/index.html">
+        <a href="http://enock017.github.io/quarto">
             <img src="src/imagens/Livros.gif" alt="Livros">
         </a>
     </div>
